--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 # Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
+dist: trusty
+sudo: required
 os:
   - linux
   # - osx
 julia:
-  - release
+  - 0.5
   - nightly
 notifications:
   email: false
