--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ julia:
   - nightly
 notifications:
   email: false
-# uncomment the following lines to override the default test script
-#script:
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("DrakeVisualizer"); Pkg.test("DrakeVisualizer"; coverage=true)'
+
+after_success:
+  - julia -e 'cd(Pkg.dir("DrakeVisualizer")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
