--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ julia:
   - nightly
 notifications:
   email: false
+branches:
+  only: master
 
 after_success:
   - julia -e 'cd(Pkg.dir("DrakeVisualizer")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
