--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ notifications:
   email: false
 branches:
   only: master
+matrix:
+  allow_failures:
+    - julia: nightly
 
 after_success:
   - julia -e 'cd(Pkg.dir("DrakeVisualizer")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
