--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,35 @@
 language: julia
 dist: trusty
 sudo: required
-os:
-  - linux
-  - osx
-julia:
-  - 0.5
-  - nightly
+
+matrix:
+  include:
+    - os: linux
+      julia: 0.5
+    - os: linux
+      julia: 0.6
+    - os: linux
+      julia: 0.5
+      env: DIRECTOR_BUILD_FROM_SOURCE
+    - os: linux
+      julia: 0.6
+      env: DIRECTOR_BUILD_FROM_SOURCE
+    - os: osx
+      julia: 0.5
+    - os: osx
+      julia: 0.6
+  allow_failures:
+    - julia: 0.6
+
 notifications:
   email: false
 branches:
   only: master
-matrix:
-  allow_failures:
-    - julia: nightly
 
+script:
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia -e 'Pkg.clone("https://github.com/rdeits/CMakeWrapper.jl.git")'
+  - julia -e 'Pkg.build("CMakeWrapper")'
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("DrakeVisualizer"); Pkg.test("DrakeVisualizer"; coverage=true)'
 after_success:
   - julia -e 'cd(Pkg.dir("DrakeVisualizer")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
