meshIO is a test dep

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
     - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
     - julia -e 'Pkg.clone(pwd())'
     - julia -e 'Pkg.checkout("Meshing")'
-    - julia -e 'Pkg.checkout("MeshIO")'
+    - julia -e 'Pkg.add("MeshIO"); Pkg.checkout("MeshIO")'
     - julia -e 'Pkg.test("DrakeVisualizer"; coverage=true)'
 
 notifications:
