Use xvfb on Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,40 @@ matrix:
   allow_failures:
     - julia: nightly
 
+addons:
+  apt:
+    packages:
+    # https://stackoverflow.com/a/34549360:
+    - xorg
+    - xvfb
+    - dbus-x11
+    - xfonts-100dpi
+    - xfonts-75dpi
+    - xfonts-cyrillic
+    # director python deps:
+    - python-dev
+    - python-lxml
+    - python-numpy
+    - python-scipy
+    - python-yaml
+
+before_script:
+  # https://lcm-proj.github.io/multicast_setup.html:
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then sudo sysctl -w kern.ipc.maxsockbuf=2097152; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo sysctl -w net.core.rmem_max=2097152; fi
+  # OSX deps:
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then pip install numpy scipy lxml PyYAML; fi
+  # X virtual frame buffer:
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16; fi
+  - sleep 3
+
 script:
-    - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-    - julia -e 'Pkg.clone(pwd()); Pkg.build("DrakeVisualizer")'
-    - julia -e 'Pkg.test("DrakeVisualizer"; coverage=true)'
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia -e 'Pkg.clone(pwd()); Pkg.build("DrakeVisualizer")'
+  # use xvfb on Linux:
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then xvfb-run -a -s "-screen 0 1024x768x24" -e /dev/stdout julia -e 'Pkg.test("DrakeVisualizer"; coverage=true)'; fi
+  # just run regularly on OSX:
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then julia -e 'Pkg.test("DrakeVisualizer"; coverage=true)'; fi
 
 notifications:
   email: false
