--- a/.travis.yml
+++ b/.travis.yml
@@ -51,11 +51,11 @@ before_script:
 
 script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-  - julia -e 'Pkg.clone(pwd()); Pkg.build("DrakeVisualizer")'
+  - julia -e 'using Pkg; Pkg.clone(pwd()); Pkg.build("DrakeVisualizer")'
   # use xvfb on Linux:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then xvfb-run -a -s "-screen 0 1024x768x24" -e /dev/stdout julia -e 'Pkg.test("DrakeVisualizer"; coverage=true)'; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then xvfb-run -a -s "-screen 0 1024x768x24" -e /dev/stdout julia -e 'using Pkg; Pkg.test("DrakeVisualizer"; coverage=true)'; fi
   # just run regularly on OSX:
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then julia -e 'Pkg.test("DrakeVisualizer"; coverage=true)'; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then julia -e 'using Pkg; Pkg.test("DrakeVisualizer"; coverage=true)'; fi
 
 notifications:
   email: false
