--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ before_script:
 
 script:
   - julia --color=yes -e "using Pkg; if VERSION >= v\"1.1.0-rc1\"; Pkg.build(verbose=true); else Pkg.build(); end"
-  - $TESTCMD --check-bounds=yes --color=yes -e 'using Pkg; Pkg.test("MeshCat", coverage=true)'
+  - $TESTCMD --check-bounds=yes --color=yes -e 'using Pkg; Pkg.test("DrakeVisualizer", coverage=true)'
 
 notifications:
   email: false
