--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ matrix:
       julia: 1.0
       env: TESTCMD="xvfb-run julia"
     - os: linux
-    - julia: 1.1
+      julia: 1.1
       env: TESTCMD="xvfb-run julia"
     - os: linux
       julia: 1.1
